<resources>
    <string name="app_name">Tetris</string>
    <string name="start_game">Начать игру</string>
    <string name="pause">Пауза</string>
    <string name="resume">Продолжить</string>
    <string name="exit">Выход</string>
    <string name="game_over">Игра окончена</string>
    <string name="restart">Начать заново</string>
    <string name="options">Настройки</string>
    <string name="records">Рекорды</string>
    <string name="name_title_preference">Никнейм</string>
    <string name="name_summary_preference">Введите ваш ник</string>
    <string name="score_n">Score:\n%d</string>
    <string name="difficult_summary_preference">Выберите сложность</string>
    <string name="difficult_title_preference">Сложность</string>
    <string name="multi_select_title_preference">Цветовая палитра</string>
    <string name="multi_select_summary_preference">Выберите цветовую палитру</string>
    <string name="color_list_summary_preference">Выберите цветовую палитру</string>
    <string name="color_list_title_preference">Цветовая палитра</string>
    <string name="control_list_title_preference">Схема управления</string>
    <string name="control_list_summary_preference">Выберите схему управления</string>

    <string name="delete_records_title_preference">Удалить рекорды</string>
    <string name="title_frame_records">Рекорды:</string>
    <string name="no_available_records">Извините, но пока нет записей о играх</string>


    <string-array name="color_titles">
        <item>Стандартный</item>
        <item>Черно-белый</item>
        <item>Радужный</item>
        <item>Белый</item>
    </string-array>

    <string-array name="control_schema_titles">
        <item>Перемещение на тап</item>
        <item>Перемещение на свайп</item>
    </string-array>

</resources>
