<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_line_corners"
    android:padding="@dimen/medium_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:textSize="@dimen/text_title"
        android:textAlignment="center"
        android:layout_margin="@dimen/medium_margin"/>

    <Button
        android:id="@+id/btn_resume"
        android:text="@string/restart"
        style="@style/MenuButtonStyle"/>

    <Button
        android:id="@+id/btn_exit"
        android:text="@string/exit"
        style="@style/MenuButtonStyle"/>

</LinearLayout>